<resources>
    <string name="app_name">Boss Tester</string>
    <string name="copy_success">already cut ，please use to the download manager</string>
    <string name="version_code">20161125</string>
    <string name="btn_switch_test">Switch</string>
    <string name="btn_switch_production_test">Test</string>
    <string name="btn_switch_production_pre">Pre</string>
    <string name="btn_switch_production_online">Online</string>
    <string name="btn_bt">add BT files</string>
    <string name="guide_page_0">不仅仅是开始</string>
    <string name="guide_page_1">一键添加种子\n自由复制链接</string>
    <string name="guide_page_2">查看应用信息\n一键卸载应用</string>
    <string name="guide_page_3">设备内存信息任意看</string>
    <string name="more_resource">more resource</string>
    <string name="performance_tv_task">insert %1$d tasks</string>
    <string name="permission_err">current version is 6.0 or up, must shoudong “allow ”open</string>
    <string name="permission_warning">Warning:the devices %1$s version,MIUI limit window ,must shou dong open guide：safe center->application manager->BossTest->show window->select allow</string>
    <string name="permission_six_error">Tips：current is Android%1$s版本,because that system limit, no cup values</string>
    <string name="ui_memory_msg">Memory %1$s</string>
    <string name="dp_memory_msg">Memory %1$s</string>
    <string name="ui_cpu_time">Cpu %1$s%%</string>
    <string name="dp_cpu_time">Cpu %1$s%%</string>
    <string name="activity_more_task_label_name">more task</string>
    <string name="activity_task_detail_label_name">task detail</string>

    <string name="system_mem">Free : \nTotal : \nLow memory threshold : \nIs Low memory :  \nApp Max Runtime : </string>
    
    <string name="btn_start">Start</string>
    <string name="btn_stop">Stop</string>
    <string name="btn_clean">Clean</string>

    <string name="free_space">Free Space:</string>
    <string name="free_space_size_with_unit">%1$1.1l %2$s</string>

    <string name="title_devices_info">Devices Information</string>
    <string name="title_Memory_info">Memory Information</string>
    
    <string name="title_longitude">Longitude:</string>
    <string name="title_latitude">Latitude:</string>

    <string name="hint_longitude">please input longitude</string>
    <string name="hint_latitude">please input latitude</string>

    <string name="btn_start_location">Start simulating position</string>

    <string name="btn_set_app_to_home">设置到首页第%1$s个Tab</string>
</resources>
