<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="@string/free_space"
                android:id="@+id/tv_space_tip"
                android:layout_centerVertical="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="25Kb"
                android:textSize="25sp"
                android:id="@+id/tv_space_size"
                android:layout_toEndOf="@id/tv_space_tip"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
    </RelativeLayout>

    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/p_bar_file_write"
        android:layout_marginTop="5dp"
        android:visibility="gone"
        android:layout_marginBottom="5dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_start"
        android:id="@+id/btn_start"
        android:textSize="18sp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_stop"
        android:id="@+id/btn_stop"
        android:textSize="18sp"
        android:visibility="gone"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_clean"
        android:id="@+id/btn_clean"
        android:textSize="18sp"/>
</LinearLayout>